# DownloadStockData

./: .gitignore  CMakeLists.txt  CotBovespa.sql  TestApi.py  api.cpp  config.json  main.cpp  performance.js  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
controllers/: CMakeLists.txt  stock_data_controller.cpp  stock_data_controller.hpp
filters/: CMakeLists.txt  RateLimitFilter.cpp  RateLimitFilter.h
include/: connection_pool.hpp  date_operations.hpp  http_client.hpp  string_operations.hpp  thread_pool.hpp  zip_archive.hpp
lib/: CMakeLists.txt  connection_pool.cpp  date_operations.cpp  http_client.cpp  string_operations.cpp  thread_pool.cpp  zip_archive.cpp
models/: TcotBovespa.cc  TcotBovespa.h  model.json
src/: CMakeLists.txt  formatting_download.cpp  formatting_download.hpp  insert_db.cpp  insert_db.hpp  parse_data.hpp  writers.hpp
